--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,37 @@
 language: julia
+sudo: required
 os:
   - linux
-  - osx
+#  - osx
 julia:
-  - release
-  - nightly
+  - 0.4
+#  - nightly
 notifications:
   email: false
+
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install build-essential gfortran perl g++ gcc cmake m4 git
+  - sudo apt-get install -y liblapack-dev liblapack-doc liblapack3gf
+  - sudo apt-get install -y libblas-dev libblas-doc libblas3gf
+script:
+  -  if [[ -a .git/shallow ]]; then git fetch --unshallow; fi 
+  - julia --check-bounds=yes -e 'versioninfo(); Pkg.clone(pwd()); Pkg.build("PumiInterface")'
+  - cd ~/.julia/v0.4/PumiInterface/src
+  - source ./use_julialib.sh
+  - cd ~/.julia/v0.4/PumiInterface/test
+  - ./runtests.sh
+#  - julia ./runtests.jl
+#  - cd ./Advection
+#  - julia ./runtests_advection.jl
+#  - ls ./newton/parallel/
+#  - cd ..
+#  - ./runtests_parallel.sh
+after_success:
+#  - julia -e 'cd(Pkg.dir("PDESolver")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+#  - julia -e 'cd(Pkg.dir("PDESolver")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+
 # uncomment the following lines to override the default test script
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("PumiInterface"); Pkg.test("PumiInterface"; coverage=true)'
+#  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("PDESolver"); Pkg.test("PDESolver"; coverage=true)'
