--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ before_install:
   - sudo apt-get install build-essential gfortran perl g++ gcc cmake m4 git
   - sudo apt-get install -y liblapack-dev liblapack-doc liblapack3gf
   - sudo apt-get install -y libblas-dev libblas-doc libblas3gf
+  - startdir=`pwd`
+  - cd ~/.julia/v0.4/PumiInterface/deps
+  - ./install_cmake3.sh
+  - source ./use_cmake.sh
+  - cd $startdir
 script:
   -  if [[ -a .git/shallow ]]; then git fetch --unshallow; fi 
   - julia --check-bounds=yes -e 'versioninfo(); Pkg.clone(pwd()); Pkg.build("PumiInterface")'
