--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   -  if [[ -a .git/shallow ]]; then git fetch --unshallow; fi 
   - julia --check-bounds=yes -e 'versioninfo(); Pkg.clone(pwd())'
   - cd ~/.julia/v0.4/PumiInterface/deps
-  - ./install_gcc_4.8.sh
+#  - ./install_gcc_4.8.sh
   - ./install_cmake3.sh
   - source ./use_cmake.sh 
   - julia --check-bounds=yes -e 'Pkg.build("PumiInterface")'
