--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,7 +35,7 @@ MESSAGE( STATUS "CMAKE_BINARY_DIR:     " ${CMAKE_BINARY_DIR})
 MESSAGE( STATUS "Pumi configuration file location: " ${SCOREC_CONFIG})
 
 #this is just example code, do your own thing
-#add_executable(mylibrary mylibrary.cpp)
+add_executable(test_init test_init.cc)
 add_library(funcs1 funcs1.cc a2.cc adaptFuncsJ.cc apfSBPShape.cc apfSBPShape3.cc dgSBPShape1.cc dgSBPShape2.cc dgSBP3Shape1.cc dgSBP3Shape2.cc triangulation.cc triangulationDG.cc)
 
 #for any targets that use PUMI, just use this command
@@ -45,5 +45,7 @@ add_library(funcs1 funcs1.cc a2.cc adaptFuncsJ.cc apfSBPShape.cc apfSBPShape3.cc
 #PRIVATE if the target is an executable
 #target_link_libraries(mylibrary PUBLIC SCOREC::core)
 target_link_libraries(funcs1 PUBLIC SCOREC::core)
+target_link_libraries(test_init PRIVATE SCOREC::core)
 
 install (TARGETS funcs1 DESTINATION lib)
+install (TARGETS test_init DESTINATION bin)
