--- a/.travis.yml
+++ b/.travis.yml
@@ -16,17 +16,21 @@ before_install:
   - sudo apt-get install -y liblapack-dev liblapack-doc liblapack3gf
   - sudo apt-get install -y libblas-dev libblas-doc libblas3gf
 script:
+  - pwd
+  - ls
+  - ls ~
+  - ls ~/.julia/
+  - sudo ~/.julia/v0.6/PumiInterface/deps/travis-install-mpi.sh mpich3
+  # hopefully setting these variables will help cmake find MPI
+  - export CC=mpicc
+  - export FC=mpif90
+  - export CXX=mpicxx
   -  if [[ -a .git/shallow ]]; then git fetch --unshallow; fi 
   - julia --check-bounds=yes -e 'versioninfo(); Pkg.clone(pwd())'
   - cd ~/.julia/v0.4/PumiInterface/deps
 #  - ./install_gcc_4.8.sh
 #  - ./install_cmake3.sh
 #  - source ./use_cmake.sh 
-  - sudo ./travis-install-mpi.sh mpich3
-  # hopefully setting these variables will help cmake find MPI
-  - export CC=mpicc
-  - export FC=mpif90
-  - export CXX=mpicxx
   - julia --check-bounds=yes -e 'Pkg.build("PumiInterface")'
   - cd ~/.julia/v0.4/PumiInterface/src
   - source ./use_julialib.sh
