--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ script:
 #  - ./install_cmake3.sh
 #  - source ./use_cmake.sh 
   - julia --check-bounds=yes -e 'Pkg.build("PumiInterface")'
-  - cd ~/.julia/v0.6/PumiInterface/src
-  - source ./use_julialib.sh
+#  - cd ~/.julia/v0.6/PumiInterface/src
+#  - source ./use_julialib.sh
   - cd ~/.julia/v0.6/PumiInterface/test
   - ./runtests.sh
 #  - julia ./runtests.jl
