add tests for gmi

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,7 @@ include_directories("${PROJECT_BINARY_DIR}")
 
 # write the path info to be read from Julia
 file(WRITE "PUMI_RPATH" "PUMI_CMAKE_PATH ${SCOREC_CONFIG}\n")
-file(APPEND "PUMI_RPATH" "PUMIINTERFACE_PREFIX ${CMAKE_INSTALL_PREFIX}")
+file(APPEND "PUMI_RPATH" "PUMIINTERFACE_PREFIX ${CMAKE_INSTALL_PREFIX}\n")
 file(APPEND "PUMI_RPATH" "HAVE_SIMMETRIX ${HAVE_SIMMETRIX}")
 
 # set RPATH for binaries
