--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -87,6 +87,7 @@ if (HAVE_SIMMETRIX)
 endif (HAVE_SIMMETRIX)
 
 add_executable(printGeoEntities printGeoEntities.cc)
+add_executable(uniform_refine uniform_refine.cc)
 add_executable(test_meshadapt test_meshadapt.cc)
 add_library(pumiInterface funcs1.cc a2.cc apfSBPShape.cc apfSBPShape3.cc dgSBPShape1.cc dgSBPShape2.cc dgSBPShape4.cc dgSBPShape5.cc dgSBPShape6.cc dgSBP3Shape1.cc dgSBP3Shape2.cc dgSBP3Shape4.cc dgSBP3Shape5.cc triangulation.cc triangulationDG.cc submesh_create.cc)
 
@@ -102,6 +103,7 @@ if (HAVE_SIMMETRIX)
   target_link_libraries(test_cad PRIVATE SCOREC::core)
 endif (HAVE_SIMMETRIX)
 target_link_libraries(printGeoEntities PRIVATE SCOREC::core)
+target_link_libraries(uniform_refine PRIVATE SCOREC::core)
 target_link_libraries(test_meshadapt PRIVATE SCOREC::core)
 
 install (TARGETS pumiInterface DESTINATION lib)
@@ -110,6 +112,7 @@ if(HAVE_SIMMETRIX)
   install (TARGETS test_cad DESTINATION bin)
 endif (HAVE_SIMMETRIX)
 install (TARGETS printGeoEntities DESTINATION bin)
+install (TARGETS uniform_refine DESTINATION bin)
 install (TARGETS test_meshadapt DESTINATION bin)
 
 install (FILES funcs1.h a2.h "${PROJECT_BINARY_DIR}/pumiInterface_config.h" DESTINATION include)
