--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,6 +84,7 @@ ENDIF("${isSystemDir}" STREQUAL "-1")
 add_executable(test_init test_init.cc)
 if (HAVE_SIMMETRIX)
   add_executable(test_cad test_cad.cc)
+  add_executable(convertSimMesh convertSimMesh.cc)
 endif (HAVE_SIMMETRIX)
 
 add_executable(printGeoEntities printGeoEntities.cc)
@@ -101,6 +102,7 @@ target_link_libraries(pumiInterface PUBLIC SCOREC::core)
 target_link_libraries(test_init PRIVATE SCOREC::core)
 if (HAVE_SIMMETRIX)
   target_link_libraries(test_cad PRIVATE SCOREC::core)
+  target_link_libraries(convertSimMesh PRIVATE SCOREC::core)
 endif (HAVE_SIMMETRIX)
 target_link_libraries(printGeoEntities PRIVATE SCOREC::core)
 target_link_libraries(uniform_refine PRIVATE SCOREC::core)
@@ -110,6 +112,7 @@ install (TARGETS pumiInterface DESTINATION lib)
 install (TARGETS test_init DESTINATION bin)
 if(HAVE_SIMMETRIX)
   install (TARGETS test_cad DESTINATION bin)
+  install (TARGETS convertSimMesh DESTINATION bin)
 endif (HAVE_SIMMETRIX)
 install (TARGETS printGeoEntities DESTINATION bin)
 install (TARGETS uniform_refine DESTINATION bin)
