change mesh adaptation to use average size

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -85,6 +85,7 @@ add_executable(test_init test_init.cc)
 if (HAVE_SIMMETRIX)
   add_executable(test_cad test_cad.cc)
   add_executable(convertSimMesh convertSimMesh.cc)
+  add_executable(test_init2 test_init2.cc)
 endif (HAVE_SIMMETRIX)
 
 add_executable(printGeoEntities printGeoEntities.cc)
@@ -101,6 +102,7 @@ add_library(pumiInterface funcs1.cc a2.cc apfSBPShape.cc apfSBPShape3.cc dgSBPSh
 target_link_libraries(pumiInterface PUBLIC SCOREC::core)
 target_link_libraries(test_init PRIVATE SCOREC::core)
 if (HAVE_SIMMETRIX)
+  target_link_libraries(test_init2 PRIVATE SCOREC::core)
   target_link_libraries(test_cad PRIVATE SCOREC::core)
   target_link_libraries(convertSimMesh PRIVATE SCOREC::core)
 endif (HAVE_SIMMETRIX)
@@ -111,6 +113,7 @@ target_link_libraries(test_meshadapt PRIVATE SCOREC::core)
 install (TARGETS pumiInterface DESTINATION lib)
 install (TARGETS test_init DESTINATION bin)
 if(HAVE_SIMMETRIX)
+  install (TARGETS test_init2 DESTINATION bin)
   install (TARGETS test_cad DESTINATION bin)
   install (TARGETS convertSimMesh DESTINATION bin)
 endif (HAVE_SIMMETRIX)
