convert mesh back and forth to Bezier to run crv::adapt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -98,6 +98,7 @@ if (HAVE_SIMMETRIX)
   add_executable(test_cad test_cad.cc)
   add_executable(convertSimMesh convertSimMesh.cc)
   add_executable(test_init2 test_init2.cc)
+  add_executable(test_init3 test_init3.cc)
 endif (HAVE_SIMMETRIX)
 
 add_executable(printGeoEntities printGeoEntities.cc)
@@ -115,6 +116,7 @@ target_link_libraries(pumiInterface PUBLIC SCOREC::core)
 target_link_libraries(test_init PRIVATE SCOREC::core)
 if (HAVE_SIMMETRIX)
   target_link_libraries(test_init2 PRIVATE SCOREC::core)
+  target_link_libraries(test_init3 PRIVATE SCOREC::core)
   target_link_libraries(test_cad PRIVATE SCOREC::core)
   target_link_libraries(convertSimMesh PRIVATE SCOREC::core)
 endif (HAVE_SIMMETRIX)
@@ -126,6 +128,7 @@ install (TARGETS pumiInterface DESTINATION lib)
 install (TARGETS test_init DESTINATION bin)
 if(HAVE_SIMMETRIX)
   install (TARGETS test_init2 DESTINATION bin)
+  install (TARGETS test_init3 DESTINATION bin)
   install (TARGETS test_cad DESTINATION bin)
   install (TARGETS convertSimMesh DESTINATION bin)
 endif (HAVE_SIMMETRIX)
